tests/mm0_mmu/fail/bad-sort6.mm0
-- provable modifier before strict
provable strict sort s12;